--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,3 @@
 language: java
-jdk:
-- oraclejdk8
-after_success:
-- bash <(curl -s https://codecov.io/bash)
 
-services:
-  - mongodb
+services: mongodb
